refactored working Ansible-On-Windows based on cloning into winAnsible and configure .ansible.cfg

--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -90,7 +90,7 @@ remote_user = root
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
-log_path = /var/log/ansible.log
+# log_path = /var/log/ansible.log
 
 # default module name for /usr/bin/ansible
 #module_name = command
@@ -98,7 +98,9 @@ log_path = /var/log/ansible.log
 # use this shell for commands executed under sudo
 # you may need to change this to bin/bash in rare instances
 # if sudo is constrained
+#
 # executable = /usr/bin/sh
+#
 executable = /bin/bash
 
 # if inventory variables overlap, does the higher precedence one win
@@ -251,7 +253,7 @@ nocows = 1
 # controls the compression level of variables sent to
 # worker processes. At the default of 0, no compression
 # is used. This value must be an integer from 0 to 9.
-#var_compression_level = 9
+var_compression_level = 9
 
 # controls what compression method is used for new-style ansible modules when
 # they are sent to the remote system.  The compression types depend on having
@@ -294,8 +296,9 @@ become_ask_pass=False
 # ssh arguments to use
 # Leaving off ControlPersist will result in poor performance, so use
 # paramiko on older platforms rather than removing it, -C controls compression use
-#ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
-
+#
+# ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
+#
 ssh_args = -C -o ControlMaster=no
 
 # The base directory for the ControlPath sockets.
@@ -303,9 +306,9 @@ ssh_args = -C -o ControlMaster=no
 #
 # Example:
 # control_path_dir = /tmp/.ansible/cp
-#control_path_dir = $HOME/.ansible/cp
+# control_path_dir = $HOME/.ansible/cp
 #
-control_path_dir = /tmp/.ansible/cp
+control_path_dir = $HOME/.ansible/cp
 
 # The path to use for the ControlPath sockets. This defaults to
 # "%(directory)s/ansible-ssh-%%h-%%p-%%r", however on some systems with
