create a symlink for python2 -> python and fix the become_sudo issue on .ansible.cfg

--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -99,9 +99,9 @@ remote_user = root
 # you may need to change this to bin/bash in rare instances
 # if sudo is constrained
 #
-# executable = /usr/bin/sh
+executable = /usr/bin/sh
 #
-executable = /bin/bash
+#executable = /bin/bash
 
 # if inventory variables overlap, does the higher precedence one win
 # or are hash values merged together?  The default is 'replace' but
